// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogCard /> Should render correctly 1`] = `
<div>
  <a
    aria-label="Blog 1 , NaN Invalid Date"
    class="sc-gsnTZi hvFSuA sc-crXcEl hbtQem"
    href="/blog/asdfg"
  >
    <div
      class="sc-dkzDqf hkFiab"
    >
      <div
        class="sc-hKMtZM kvlGVY"
      />
      <div
        class="sc-eCYdqJ heBWoi"
      >
        <div
          aria-hidden="true"
          class="sc-evZas bZNQpX"
        >
          <div
            class="sc-breuTD knUrQg date container"
          >
            <div
              class="sc-fnykZs gNzjfC"
            >
              <span
                class="sc-fLlhyt hQrWnF"
              >
                NaN Invalid Date
              </span>
            </div>
            <div
              class="sc-fEOsli YrDqx"
            >
              <span
                class="sc-fLlhyt hQrWnF"
              >
                NaN
              </span>
            </div>
            <div
              class="sc-fEOsli YrDqx"
            >
              <span
                class="sc-fLlhyt hQrWnF"
              >
                Invalid Date
              </span>
            </div>
          </div>
          <div
            class="sc-ksZaOG fRNvFu"
          >
            <h1
              class="sc-hHLeRK ilwmty"
            >
              Blog 1 
            </h1>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly when deleted 1`] = `
<div>
  <a
    aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
    class="sc-gsnTZi hvFSuA sc-crXcEl hbtQem"
    href="/blog/mndyd8"
  >
    <div
      class="sc-dkzDqf hkFiab"
    >
      <div
        class="sc-hKMtZM kvlGVY"
      />
      <div
        class="sc-eCYdqJ heBWoi"
      >
        <div
          aria-hidden="true"
          class="sc-evZas bZNQpX"
        >
          <div
            class="sc-breuTD knUrQg date container"
          >
            <div
              class="sc-fnykZs gNzjfC"
            >
              <span
                class="sc-fLlhyt hQrWnF"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="sc-fEOsli YrDqx"
            >
              <span
                class="sc-fLlhyt hQrWnF"
              >
                23-30
              </span>
            </div>
            <div
              class="sc-fEOsli YrDqx"
            >
              <span
                class="sc-fLlhyt hQrWnF"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="sc-ksZaOG fRNvFu"
          >
            <h1
              class="sc-hHLeRK ilwmty"
            >
              Untitled blog (DELETED)
            </h1>
            <div
              class="sc-idiyUo beoGSj"
            >
              <div
                class="sc-ivTmOn"
              >
                <span
                  class="sc-cxabCf cWFBrE"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-hAZoDl gdKkFT"
          >
            <div
              class="sc-iBkjds bZGVhU"
            >
              <style>
                .js .gg-image__img--hide {opacity: 0;}
              </style>
              <div
                class="sc-ftvSup ilXIrt"
                style="padding-bottom: 100%;"
              >
                <div
                  class="sc-papXJ dBrEee"
                >
                  <div
                    class="sc-jSMfEi detKc sc-jqUVSM kZOdvC"
                  >
                    <div
                      class="sc-gKXOVf ihacwt"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <img
                  alt="card"
                  class="sc-kDDrLX fyqUD gg-image__img--hide"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="sc-iqcoie iTHoXU gg-image__img--hide"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly with all parameters supplied 1`] = `
<div>
  <a
    aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
    class="sc-gsnTZi hvFSuA sc-crXcEl hbtQem"
    href="/blog/zxywvuts"
  >
    <div
      class="sc-dkzDqf hkFiab"
    >
      <div
        class="sc-hKMtZM kvlGVY"
      />
      <div
        class="sc-eCYdqJ heBWoi"
      >
        <div
          aria-hidden="true"
          class="sc-evZas bZNQpX"
        >
          <div
            class="sc-breuTD knUrQg date container"
          >
            <div
              class="sc-fnykZs gNzjfC"
            >
              <span
                class="sc-fLlhyt hQrWnF"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="sc-fEOsli YrDqx"
            >
              <span
                class="sc-fLlhyt hQrWnF"
              >
                23-30
              </span>
            </div>
            <div
              class="sc-fEOsli YrDqx"
            >
              <span
                class="sc-fLlhyt hQrWnF"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="sc-ksZaOG fRNvFu"
          >
            <h1
              class="sc-hHLeRK ilwmty"
            >
              St Ives  2018
            </h1>
            <div
              class="sc-idiyUo beoGSj"
            >
              <div
                class="sc-ivTmOn"
              >
                <span
                  class="sc-cxabCf cWFBrE"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-hAZoDl gdKkFT"
          >
            <div
              class="sc-iBkjds bZGVhU"
            >
              <style>
                .js .gg-image__img--hide {opacity: 0;}
              </style>
              <div
                class="sc-ftvSup ilXIrt"
                style="padding-bottom: 100%;"
              >
                <div
                  class="sc-papXJ dBrEee"
                >
                  <div
                    class="sc-jSMfEi detKc sc-jqUVSM kZOdvC"
                  >
                    <div
                      class="sc-gKXOVf ihacwt"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <img
                  alt="card"
                  class="sc-kDDrLX fyqUD gg-image__img--hide"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="sc-iqcoie iTHoXU gg-image__img--hide"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly with custom className 1`] = `
<div>
  <a
    aria-label="Blog 1 , NaN Invalid Date"
    class="sc-gsnTZi hvFSuA sc-crXcEl hbtQem test-custom-classname"
    href="/blog/asdfg"
  >
    <div
      class="sc-dkzDqf hkFiab"
    >
      <div
        class="sc-hKMtZM kvlGVY"
      />
      <div
        class="sc-eCYdqJ heBWoi"
      >
        <div
          aria-hidden="true"
          class="sc-evZas bZNQpX"
        >
          <div
            class="sc-breuTD knUrQg date container"
          >
            <div
              class="sc-fnykZs gNzjfC"
            >
              <span
                class="sc-fLlhyt hQrWnF"
              >
                NaN Invalid Date
              </span>
            </div>
            <div
              class="sc-fEOsli YrDqx"
            >
              <span
                class="sc-fLlhyt hQrWnF"
              >
                NaN
              </span>
            </div>
            <div
              class="sc-fEOsli YrDqx"
            >
              <span
                class="sc-fLlhyt hQrWnF"
              >
                Invalid Date
              </span>
            </div>
          </div>
          <div
            class="sc-ksZaOG fRNvFu"
          >
            <h1
              class="sc-hHLeRK ilwmty"
            >
              Blog 1 
            </h1>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogsList /> Should render correctly 1`] = `
<div>
  <div>
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="sc-gsnTZi hvFSuA sc-crXcEl hbtQem blogs-list__card"
      href="/blog/asdfg"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-evZas bZNQpX"
          >
            <div
              class="sc-breuTD knUrQg date container"
            >
              <div
                class="sc-fnykZs gNzjfC"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  NaN Invalid Date
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  NaN
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  Invalid Date
                </span>
              </div>
            </div>
            <div
              class="sc-ksZaOG fRNvFu"
            >
              <h1
                class="sc-hHLeRK ilwmty"
              >
                Blog 1 
              </h1>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="sc-gsnTZi hvFSuA sc-crXcEl hbtQem blogs-list__card"
      href="/blog/zxywvuts"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-evZas bZNQpX"
          >
            <div
              class="sc-breuTD knUrQg date container"
            >
              <div
                class="sc-fnykZs gNzjfC"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-ksZaOG fRNvFu"
            >
              <h1
                class="sc-hHLeRK ilwmty"
              >
                St Ives  2018
              </h1>
              <div
                class="sc-idiyUo beoGSj"
              >
                <div
                  class="sc-ivTmOn"
                >
                  <span
                    class="sc-cxabCf cWFBrE"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hAZoDl gdKkFT"
            >
              <div
                class="sc-iBkjds bZGVhU"
              >
                <style>
                  .js .gg-image__img--hide {opacity: 0;}
                </style>
                <div
                  class="sc-ftvSup ilXIrt"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-papXJ dBrEee"
                  >
                    <div
                      class="sc-jSMfEi detKc sc-jqUVSM kZOdvC"
                    >
                      <div
                        class="sc-gKXOVf ihacwt"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="sc-kDDrLX fyqUD gg-image__img--hide"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-iqcoie iTHoXU gg-image__img--hide"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="sc-gsnTZi hvFSuA sc-crXcEl hbtQem blogs-list__card"
      href="/blog/mndyd8"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-evZas bZNQpX"
          >
            <div
              class="sc-breuTD knUrQg date container"
            >
              <div
                class="sc-fnykZs gNzjfC"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-ksZaOG fRNvFu"
            >
              <h1
                class="sc-hHLeRK ilwmty"
              >
                Untitled blog (DELETED)
              </h1>
              <div
                class="sc-idiyUo beoGSj"
              >
                <div
                  class="sc-ivTmOn"
                >
                  <span
                    class="sc-cxabCf cWFBrE"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hAZoDl gdKkFT"
            >
              <div
                class="sc-iBkjds bZGVhU"
              >
                <style>
                  .js .gg-image__img--hide {opacity: 0;}
                </style>
                <div
                  class="sc-ftvSup ilXIrt"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-papXJ dBrEee"
                  >
                    <div
                      class="sc-jSMfEi detKc sc-jqUVSM kZOdvC"
                    >
                      <div
                        class="sc-gKXOVf ihacwt"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="sc-kDDrLX fyqUD gg-image__img--hide"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-iqcoie iTHoXU gg-image__img--hide"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="test-custom-classname"
  >
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="sc-gsnTZi hvFSuA sc-crXcEl hbtQem blogs-list__card"
      href="/blog/asdfg"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-evZas bZNQpX"
          >
            <div
              class="sc-breuTD knUrQg date container"
            >
              <div
                class="sc-fnykZs gNzjfC"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  NaN Invalid Date
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  NaN
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  Invalid Date
                </span>
              </div>
            </div>
            <div
              class="sc-ksZaOG fRNvFu"
            >
              <h1
                class="sc-hHLeRK ilwmty"
              >
                Blog 1 
              </h1>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="sc-gsnTZi hvFSuA sc-crXcEl hbtQem blogs-list__card"
      href="/blog/zxywvuts"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-evZas bZNQpX"
          >
            <div
              class="sc-breuTD knUrQg date container"
            >
              <div
                class="sc-fnykZs gNzjfC"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-ksZaOG fRNvFu"
            >
              <h1
                class="sc-hHLeRK ilwmty"
              >
                St Ives  2018
              </h1>
              <div
                class="sc-idiyUo beoGSj"
              >
                <div
                  class="sc-ivTmOn"
                >
                  <span
                    class="sc-cxabCf cWFBrE"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hAZoDl gdKkFT"
            >
              <div
                class="sc-iBkjds bZGVhU"
              >
                <style>
                  .js .gg-image__img--hide {opacity: 0;}
                </style>
                <div
                  class="sc-ftvSup ilXIrt"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-papXJ dBrEee"
                  >
                    <div
                      class="sc-jSMfEi detKc sc-jqUVSM kZOdvC"
                    >
                      <div
                        class="sc-gKXOVf ihacwt"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="sc-kDDrLX fyqUD gg-image__img--hide"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-iqcoie iTHoXU gg-image__img--hide"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="sc-gsnTZi hvFSuA sc-crXcEl hbtQem blogs-list__card"
      href="/blog/mndyd8"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-evZas bZNQpX"
          >
            <div
              class="sc-breuTD knUrQg date container"
            >
              <div
                class="sc-fnykZs gNzjfC"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-ksZaOG fRNvFu"
            >
              <h1
                class="sc-hHLeRK ilwmty"
              >
                Untitled blog (DELETED)
              </h1>
              <div
                class="sc-idiyUo beoGSj"
              >
                <div
                  class="sc-ivTmOn"
                >
                  <span
                    class="sc-cxabCf cWFBrE"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hAZoDl gdKkFT"
            >
              <div
                class="sc-iBkjds bZGVhU"
              >
                <style>
                  .js .gg-image__img--hide {opacity: 0;}
                </style>
                <div
                  class="sc-ftvSup ilXIrt"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-papXJ dBrEee"
                  >
                    <div
                      class="sc-jSMfEi detKc sc-jqUVSM kZOdvC"
                    >
                      <div
                        class="sc-gKXOVf ihacwt"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="sc-kDDrLX fyqUD gg-image__img--hide"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-iqcoie iTHoXU gg-image__img--hide"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with deleteBlog function 1`] = `
<div>
  <div>
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="sc-gsnTZi hvFSuA sc-crXcEl hbtQem blogs-list__card blogs-list__card--with-controls"
      href="/blog/asdfg"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-evZas bZNQpX"
          >
            <div
              class="sc-breuTD knUrQg date container"
            >
              <div
                class="sc-fnykZs gNzjfC"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  NaN Invalid Date
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  NaN
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  Invalid Date
                </span>
              </div>
            </div>
            <div
              class="sc-ksZaOG fRNvFu"
            >
              <h1
                class="sc-hHLeRK ilwmty"
              >
                Blog 1 
              </h1>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="sc-gicCDI bMnljm blogs-list__control"
      type="button"
    >
      <span
        class="sc-bZkfAO housOp"
      >
        Delete blog
      </span>
    </button>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="sc-gsnTZi hvFSuA sc-crXcEl hbtQem blogs-list__card blogs-list__card--with-controls"
      href="/blog/zxywvuts"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-evZas bZNQpX"
          >
            <div
              class="sc-breuTD knUrQg date container"
            >
              <div
                class="sc-fnykZs gNzjfC"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-ksZaOG fRNvFu"
            >
              <h1
                class="sc-hHLeRK ilwmty"
              >
                St Ives  2018
              </h1>
              <div
                class="sc-idiyUo beoGSj"
              >
                <div
                  class="sc-ivTmOn"
                >
                  <span
                    class="sc-cxabCf cWFBrE"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hAZoDl gdKkFT"
            >
              <div
                class="sc-iBkjds bZGVhU"
              >
                <style>
                  .js .gg-image__img--hide {opacity: 0;}
                </style>
                <div
                  class="sc-ftvSup ilXIrt"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-papXJ dBrEee"
                  >
                    <div
                      class="sc-jSMfEi detKc sc-jqUVSM kZOdvC"
                    >
                      <div
                        class="sc-gKXOVf ihacwt"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="sc-kDDrLX fyqUD gg-image__img--hide"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-iqcoie iTHoXU gg-image__img--hide"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="sc-gicCDI bMnljm blogs-list__control"
      type="button"
    >
      <span
        class="sc-bZkfAO housOp"
      >
        Delete blog
      </span>
    </button>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="sc-gsnTZi hvFSuA sc-crXcEl hbtQem blogs-list__card blogs-list__card--with-controls"
      href="/blog/mndyd8"
    >
      <div
        class="sc-dkzDqf hkFiab"
      >
        <div
          class="sc-hKMtZM kvlGVY"
        />
        <div
          class="sc-eCYdqJ heBWoi"
        >
          <div
            aria-hidden="true"
            class="sc-evZas bZNQpX"
          >
            <div
              class="sc-breuTD knUrQg date container"
            >
              <div
                class="sc-fnykZs gNzjfC"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-fEOsli YrDqx"
              >
                <span
                  class="sc-fLlhyt hQrWnF"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-ksZaOG fRNvFu"
            >
              <h1
                class="sc-hHLeRK ilwmty"
              >
                Untitled blog (DELETED)
              </h1>
              <div
                class="sc-idiyUo beoGSj"
              >
                <div
                  class="sc-ivTmOn"
                >
                  <span
                    class="sc-cxabCf cWFBrE"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hAZoDl gdKkFT"
            >
              <div
                class="sc-iBkjds bZGVhU"
              >
                <style>
                  .js .gg-image__img--hide {opacity: 0;}
                </style>
                <div
                  class="sc-ftvSup ilXIrt"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-papXJ dBrEee"
                  >
                    <div
                      class="sc-jSMfEi detKc sc-jqUVSM kZOdvC"
                    >
                      <div
                        class="sc-gKXOVf ihacwt"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="sc-kDDrLX fyqUD gg-image__img--hide"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-iqcoie iTHoXU gg-image__img--hide"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="sc-gicCDI jVDCxe blogs-list__control"
      disabled=""
      type="button"
    >
      <span
        class="sc-bZkfAO housOp"
      >
        Delete blog
      </span>
    </button>
  </div>
</div>
`;
